[WebPayments] Adding FilterProfilesForShipping to profile comparator

BUG=722949

Review-Url: https://codereview.chromium.org/2884393002
Cr-Commit-Position: refs/heads/master@{#473929}

Former-commit-id: eb8d574b98adfcbd3b5ce2eb6e521b83efbb428a